[package]
name = "intersession-layer-messaging"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Thomas Braun"]
description = "A metastable messenger that allows reliability between peers when peers go offline, are unreliable, and facing intermittent network conditions between sessions"
homepage = "https://avarok.net"
repository = "https://github.com/tbraun96/intersession-layer-messaging"
readme = "README.md"
keywords = ["messaging", "networking", "reliability", "intermittent", "peer"]
categories = ["network-programming", "asynchronous"]

[features]
testing = []

[dependencies]
citadel_logging = { version = "0.13.0", default-features = false }
serde = { version = "1.0.104", default-features = false, features = ["derive"] }
bincode2 = { version = "2.0.1", default-features = false }
uuid = { version = "1.8.0", default-features = false, features = ["v4"] }
tokio = { version = "1.28.1", default-features = false, features = ["sync", "rt", "macros"] }
log = { version = "0.4.21", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["alloc", "std", "async-await"] }
async-trait = { version = "0.1.83", default-features = false }
itertools = { version = "0.13.0", default-features = false, features = ["use_std"] }
dashmap = { version = "6.1.0", default-features = false, features = ["serde"] }
auto_impl = { version = "1.2.0", default-features = false }
num = { version = "0.4.1", default-features = false }

# WASM-compatible time and spawn support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Native time support
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.28.1", default-features = false, features = ["time"] }

[dev-dependencies]
tokio = { version = "1.28.1", default-features = false, features = ["rt-multi-thread", "time"] }
